# mpc_control

mpc_control/: CMakeLists.txt
mpc_control/demo/: doubleint.cpp  vehmpc.cpp
mpc_control/mpc_solver/: mpc_solver.cc
mpc_control/planning/: DesireTrajectory.cpp  DesireTrajectory.h
mpc_control/polynomial/: QuarticPolynomial.cpp  QuarticPolynomial.h  QuinticPolynomial.cpp  QuinticPolynomial.h
mpc_control/render/: OpenGLPlot.cpp  OpenGLPlot.h  mainwindow.cpp  mainwindow.h
mpc_control/vehcontroller/: MPCControler.cpp  MPCControler.h
mpc_control/vehiclemodel/: Vehicle.cpp  Vehicle.h
