cmake_minimum_required(VERSION 3.10)
project(mpc_control)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package( Qt5Widgets REQUIRED)
find_package( Qt5Core REQUIRED)
find_package( Qt5Gui REQUIRED)
set(UI_FILES)
set(RC_FILES)
set(QRC_FILES)
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})
include_directories(~/mpc_control-master/Library/qpOASES-releases-3.2.1/include)
link_directories(~/mpc_control-master/Library/qpOASES-releases-3.2.1/bin)
set(compile_files )
set(compile_files ${compile_files} render/mainwindow.cpp)
set(compile_files ${compile_files} mpc_solver/mpc_solver.cc)
set(compile_files ${compile_files} qp_solver/active_set_qp_solver.cc)
set(compile_files ${compile_files} qp_solver/qp_solver.cc)
set(compile_files ${compile_files} demo/vehmpc.cpp)
set(compile_files ${compile_files} planning/DesireTrajectory.cpp)
set(compile_files ${compile_files} vehcontroller/MPCControler.cpp)
set(compile_files ${compile_files} vehiclemodel/Vehicle.cpp)
set(compile_files ${compile_files} polynomial/QuarticPolynomial.cpp)
set(compile_files ${compile_files} polynomial/QuinticPolynomial.cpp)
add_executable(vehmpc  ${compile_files})
target_link_libraries(vehmpc Qt5::Widgets)
target_link_libraries(vehmpc /home/naruto/cyber-rt-master/local_depends/lib/libglog.so )
target_link_libraries(vehmpc /home/naruto/mpc_control-master/Library/qpOASES-releases-3.2.1/bin/libqpOASES.a
    )
